<resources>
    <string name="app_name">Image Editor</string>
    <string name="action_settings">Settings</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="create_photo_button">Create Photo Button</string>
    <string name="choose_image_button">Choose Image Button</string>
    <string name="done">Done</string>
    <string name="share_image_button">Share Image Button</string>
    <string name="save_image_button">Save Image Button</string>
    <string name="rotate_button">Rotate Button</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="provider_authority" translatable="false">com.kirillmesh.imageeditor.provider</string>
    <string name="back_button">Back Button</string>
    <string name="next_button">Next Button</string>
    <string name="label_brush">Brush</string>
    <string name="label_shape">Shape</string>
    <string name="label_oval">Oval</string>
    <string name="label_rectangle">Rectangle</string>
    <string name="label_line">Line</string>
    <string name="label_arrow">Arrow</string>
    <string name="label_emoji">Emoji</string>
    <string name="label_sticker">Sticker</string>
    <string name="label_eraser">Eraser</string>
    <string name="label_eraser_mode">Eraser Mode</string>
    <string name="label_text">Text</string>
    <string name="label_filter">Filter</string>
    <string name="label_adjust">Adjust</string>
    <string name="label_crop">Crop</string>
    <string name="label_crop_rotate">Crop/Rotate</string>
    <string name="filter_imageview">Filter ImageView</string>
    <string name="sticker_imageview">Sticker ImageView</string>
    <string name="tool_icon_imageview">Tool Icon ImageView</string>
    <string name="close">Close</string>
    <string name="opacity">Opacity</string>
    <string name="shape">Shape</string>
    <string name="size">Size</string>
    <string name="edit_another_image">Edit Another Image</string>
    <string name="result_edited_image">Result edited image</string>
    <string name="share_your_iamge">Share your image!</string>
    <string name="share">Share</string>
    <string name="save">Save</string>
    <string name="create_photo">Create Photo</string>
    <string name="choose_photo">Choose photo</string>
</resources>