<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChooseImageFragment">

    <TextView
        android:id="@+id/editAnotherImageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rounded_border_text_view"
        android:padding="10dp"
        android:text="@string/edit_another_image"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/savePhotoImageView" />

    <ImageView
        android:id="@+id/sharePhotoImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="78dp"
        android:layout_marginTop="50dp"
        android:background="#020202"
        android:contentDescription="@string/share_image_button"
        android:padding="8dp"
        android:src="@drawable/ic_share"
        app:layout_constraintEnd_toStartOf="@+id/savePhotoImageView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editedImegeVIew" />

    <ImageView
        android:id="@+id/savePhotoImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="78dp"
        android:background="#020202"
        android:contentDescription="@string/save_image_button"
        android:padding="8dp"
        android:src="@drawable/ic_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/sharePhotoImageView"
        app:layout_constraintTop_toTopOf="@+id/sharePhotoImageView" />

    <ImageView
        android:id="@+id/editedImegeVIew"
        android:layout_width="0dp"
        android:layout_height="400dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:adjustViewBounds="true"
        android:background="#050505"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars"
        android:contentDescription="@string/result_edited_image" />

</androidx.constraintlayout.widget.ConstraintLayout>